# MeltPoolDG

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  contributing.html  developer_guide.html  feed_stock_particles.csv  genindex.html  howto.html  index.html  installation.html  meltpooldg.cpp  objects.inv  pixi.toml  plot_analytical_curvature_ellipse.py  publications.html  search.html  searchindex.js  unidirectional_heat_transfer_with_two_phase_rho_times_cp.json
applications/: CMakeLists.txt
applications/cmake/: setup_application.cmake
applications/mp-advec-diff/: CMakeLists.txt  advection_diffusion_application.cpp  advection_diffusion_application.hpp  advection_diffusion_case.hpp  advection_diffusion_problem.cpp  advection_diffusion_problem.hpp  description.md  parameters.schema.json  parameters.schema.md
applications/mp-cfd-dem/: CMakeLists.txt  cfd_dem_application.cpp  cfd_dem_application.hpp  cfd_dem_case.hpp  channel_particle_flow_2d_implicit.json  channel_particle_flow_2d_implicit_explicit.json  description.md  parameters.schema.json  parameters.schema.md
applications/mp-compressible-flow/: CMakeLists.txt  compressible_flow_application.cpp  compressible_flow_application.hpp  compressible_flow_case.hpp  compressible_flow_problem.cpp  compressible_flow_problem.hpp  description.md  parameters.schema.json  parameters.schema.md
applications/mp-compressible-multiphase/: CMakeLists.txt  compressible_multiphase_application.cpp  compressible_multiphase_application.hpp  compressible_multiphase_case.hpp  compressible_multiphase_problem.cpp  compressible_multiphase_problem.hpp  description.md  parameters.schema.json  parameters.schema.md
applications/mp-dem/: CMakeLists.txt  dem_application.cpp  dem_application.hpp  dem_case.hpp  parameters.schema.json  parameters.schema.md
applications/mp-heat-transfer/: CMakeLists.txt  description.md  heat_transfer_application.cpp  heat_transfer_application.hpp  heat_transfer_case.hpp  heat_transfer_problem.cpp  heat_transfer_problem.hpp  parameters.schema.json  parameters.schema.md
applications/mp-level-set/: CMakeLists.txt  description.md  level_set_application.cpp  level_set_application.hpp  level_set_case.hpp  level_set_problem.cpp  level_set_problem.hpp  parameters.schema.json  parameters.schema.md
applications/mp-melt-pool/: CMakeLists.txt  description.md  melt_pool_application.cpp  melt_pool_application.hpp  melt_pool_case.hpp  parameters.schema.json  parameters.schema.md
applications/mp-meltpool-vapor-flow/: CMakeLists.txt  meltpool_vapor_flow_application.cpp  meltpool_vapor_flow_application.hpp  meltpool_vapor_flow_case.hpp  parameters.schema.json  (+1 more)
benchmarks/: CMakeLists.txt  README.md  benchmark_util.cpp  benchmark_util.hpp
tests/: CMakeLists.txt  advection_DG.json  advection_DG.mpirun=4.output  advection_diffusion.json  advection_diffusion.mpirun=4.output  advection_diffusion_amr.json  advection_diffusion_amr.mpirun=4.output  advection_diffusion_amr_mf.json  advection_diffusion_amr_mf.mpirun=4.output  advection_diffusion_amr_mf_adaflo.json  advection_diffusion_amr_mf_adaflo.with_adaflo_support=on.mpirun=4.output  advection_diffusion_mf.json  advection_diffusion_mf.mpirun=4.output  advection_diffusion_mf_3d.json  advection_diffusion_mf_3d.mpirun=4.output  advection_diffusion_mf_adaflo.json  advection_diffusion_mf_adaflo.with_adaflo_support=on.mpirun=4.output  advection_diffusion_mf_inflow_outflow.json  advection_diffusion_mf_inflow_outflow.mpirun=4.output  advection_diffusion_mf_inflow_outflow_3d.json  advection_diffusion_mf_inflow_outflow_3d.mpirun=4.output  advection_diffusion_mf_supg.json  advection_diffusion_mf_supg.mpirun=4.output  advection_diffusion_user_output.json  advection_diffusion_user_output.mpirun=4.output  evaporating_droplet.json  evaporating_droplet.with_adaflo_support=on.mpirun=4.output  evaporating_droplet_ball.json  evaporating_droplet_ball.with_adaflo_support=on.mpirun=4.output  evaporating_droplet_with_heat.json  evaporating_droplet_with_heat.with_adaflo_support=on.mpirun=4.output  evaporating_droplet_with_heat_uGamma_sharp.json  evaporating_droplet_with_heat_uGamma_sharp.with_adaflo_support=on.mpirun=4.output  evaporating_shell.json  evaporating_shell.with_adaflo_support=on.mpirun=4.output  evaporating_shell_quarter_two_phase.json  evaporating_shell_quarter_two_phase.with_adaflo_support=on.mpirun=4.output  evaporative_heat_loss_sharp.json  evaporative_heat_loss_sharp.with_adaflo_support=on.mpirun=4.output  evaporative_heat_loss_sharp_1d.json  (+323 more)
unit_tests/: CMakeLists.txt  brinkman_penalty_unit_test.cc  brinkman_penalty_unit_test.mpirun=4.output  broadcast_interface_value_to_vector.cc  broadcast_interface_value_to_vector.mpirun=4.output  broadcast_interface_value_to_vector.with_arborx_support=on.mpirun=4.output  characteristic_numbers.cc  characteristic_numbers.output  cut_mixed_faces.cc  cut_mixed_faces.output  cut_norm.cc  cut_norm.output  cut_solution_transfer.cc  delta_approximation_01.cc  delta_approximation_01.output  dem_unit_test.cc  dem_unit_test.mpirun=4.output  distance_function_ellipsoidal_manifold.cc  distance_function_ellipsoidal_manifold.mpirun=4.output  distance_function_hyper_plane.cc  distance_function_hyper_plane.output  distance_function_infinite_plane.cc  distance_function_infinite_plane.output  distance_function_rectangular_manifold.cc  distance_function_rectangular_manifold.mpirun=4.output  dummy.cc  dummy.output  evaporation_model_knight.cc  evaporation_model_knight.output  evaporation_model_pressure_aware.cc  evaporation_model_pressure_aware.output  extend_interface_value.cc  extend_interface_value.mpirun=4.output  extend_interface_value.with_arborx_support=on.mpirun=4.output  fill_dof_vector_from_cell_operation_vec_01.cc  fill_dof_vector_from_cell_operation_vec_01.mpirun=1.output  fill_dof_vector_from_cell_operation_vec_01.output  gmg.cc  gmg.output  material.cc  (+15 more)
(+9337 files in other folders)
