file(GLOB CUSTOM_APPLICATION_CMAKE_COMMANDS "${CMAKE_SOURCE_DIR}/applications/cmake/*.cmake")
foreach(APPLICATION_COMMAND ${CUSTOM_APPLICATION_CMAKE_COMMANDS})
    include(${APPLICATION_COMMAND})
endforeach()

file(GLOB APP_DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)

foreach(APP_DIR ${APP_DIRS})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${APP_DIR} AND NOT APP_DIR STREQUAL "cmake")
        add_subdirectory(${APP_DIR})
    endif()
endforeach()
